(fix): fix z-index issues when opening the mobile menu

--- a/src/assets/styles/components/_cards.scss
+++ b/src/assets/styles/components/_cards.scss
@@ -22,7 +22,7 @@
     justify-content: center;
     align-items: center;
     color: $color-white;
-    z-index: 10000;
+    z-index: 999;
   }
 
   &__wishlist {
