--- a/src/assets/styles/layout/_header.scss
+++ b/src/assets/styles/layout/_header.scss
@@ -192,7 +192,7 @@
     align-items: center;
     padding: 0;
     border-top: 1px solid #eee;
-    z-index: 100;
+    z-index: 1000;
     max-height: 0;
     opacity: 0;
     overflow: hidden;
